# temper

./: .gitignore  LICENSE.txt  README.md
hardware/: dht22_box.FCStd  dht22_box_top.20250729-172406.FCBak  dht22_box_top.3mf
hardware/3d_printed_parts/dht22_temp_senor_case/: dht22_box.3mf  dht22_box_top.FCStd
hardware/3d_printed_parts/temper_case/: base.20251201-191731.FCBak  base.3mf  base.FCStd  button.3mf  button.FCStd  no_bat_base.20260325-122918.FCBak  no_bat_base.3mf  no_bat_base.FCStd  no_bat_top.20260325-100833.FCBak  no_bat_top.3mf  no_bat_top.FCStd
hardware/schematic_pcb/: .gitignore  temper.kicad_pcb  temper.kicad_pro  temper.kicad_sch
hardware/schematic_pcb/gerbers/: temper-B_Cu.gbl  temper-B_Mask.gbs  temper-B_Paste.gbp  temper-B_Silkscreen.gbo  temper-Edge_Cuts.gm1  temper-PTH.drl  (+5 more)
software/client/: .gitignore  README.md  build.sh  check_code.sh  create_poetry_env.sh  install.py  pyproject.toml  run_tests.sh
software/client/linux/: temper-0.1.0-py3-none-any.whl  temper-0.2.0-py3-none-any.whl  temper-0.2.1-py3-none-any.whl  temper-0.2.11-py3-none-any.whl  temper-0.2.13-py3-none-any.whl  temper-0.2.2-py3-none-any.whl  temper-0.2.3-py3-none-any.whl  temper-0.2.4-py3-none-any.whl  temper-0.2.5-py3-none-any.whl  temper-0.2.6-py3-none-any.whl  temper-0.2.7-py3-none-any.whl  temper-0.2.9-py3-none-any.whl
software/client/src/temper/: temper_db.py  temper_gui.py  temper_set_name.py
software/client/src/temper/assets/: pyproject.toml
software/client/tests/: test_temper_db.py  test_temper_gui.py
software/mcu/: README.md  boot.py  main.py  webrepl_cfg.py
(+56 files in other folders)
