[project]
name = "temper"
version = "0.2.6"
description = "An app to allow temperature and humidity data from temper hardware to be saved to a database and displayed."
authors = [
    {name = "Paul Austen",email = "pjaos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.12,<4"
dependencies = [
]

[tool.poetry]
packages = [{include = "temper", from = "src"}]

[tool.poetry.dependencies]
pytest = "*"
nicegui = "^3.9.0"
p3lib = "^1.1.158"
pillow = "*"
psutil = "*"
rich = "*"

[tool.poetry.scripts]
temper_db = "temper.temper_db:main"
temper_set_name = "temper.temper_set_name:main"
temper_gui = "temper.temper_gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
